--------------------------------------------------------------------------
---------                Ampache -- CHANGELOG                    ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.6-Alpha2
        - Updated getID3 to 1.8.5
        - Fixed duplicate searching even more
        - Committed minor bugfixes for Penguin theme
        - Added Fresh theme
        - Fixed spurious API handshake failure output


--------------------------------------------------------------------------
  v.3.6-Alpha1 04/27/2011
        - Fixed forced transcoding
        - Fixed display during catalog updates (reported by Demonic)
        - Fixed duplicate searching (patch from Demonic)
        - Cleaned up transcoding assumptions
        - Fixed tag browsing
        - Added new search/advanced random/dynamic playlist interface
        - byterange handling for ranges starting with 0 (patch from uberbrady)
        - Fixed issue with updating ACLs under Windows (reported by Citlali)
	- Add function that check ampache and php version from each website.
	- Updated each ampache header comment based on phpdocumentor.
	- Fixed only admin can browse phpinfo() for security reasons on /info.php
	- Added a few translation words.
	- Updated version 3.6 on docs/*
	- Implemented ldap_require group (patch from eliasp)
	- Fix \ in web path under Apache + Windows Bug #135
	- Partial MusicBrainz metadata gathering via plugin
	- Metadata code cleanup, support for plugins as metadata sources
	- New plugin architecture
	- Fixed display charset issue with catalog add/update
	- Fixed handling of temporary playlists with >100 items
	- Changed Browse from a singleton to multiple instances
	- Fixed setting access levels for plugin passwords
	- Fixed handling of unusual characters in passwords
	- Fixed support for requesting different thumbnail sizes